made changes in the animation

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
             })
             let h3 = document.querySelector('.subject');
-            h3.setAttribute("class", "text-light mt-5 pt-5 d-inline subject animated2");
+            h3.setAttribute("class", "text-light mt-5 pt-5 d-inline subject animated");
         }
 
 
