--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 let h4 = document.querySelector('.word-meaning');
                 h4.innerText = "Meaning not found. You might have misspelled the word. Please try again";
                 h4.classList.remove("d-none")
-                h4.classList.add("d-block", "animated2");
+                h4.classList.add("d-inline", "animated2");
                 h4.addEventListener("animationend", ()=>{
                     h4.classList.remove("animated2");
                 })
