--- a/index.html
+++ b/index.html
@@ -129,18 +129,20 @@
             </li>
         </ul>
     </nav>
-    <div class="form-group" style="position: absolute; top: 200px; left:200px; background: rgb(48, 48, 48); padding: 25px; border-radius: 10px;">
-        <label for="word" class="text-light mb-4 lbl">Enter the word you want to get the meaning of</label>
-        <input type="text" class="form-control text-center w-25 wordbox text-light" id="word">
-        <button class="btn btn-danger mb-5 mt-2" onclick="Clear()">Clear</button>
+    <div class="container d-flex">
 
-        <button class="btn btn-dark d-block my-4 mybutton" onclick="createMeaning();">Get meaning</button>
-    </div>
-    <h5 class="text-light" style="position: absolute; top: 200px; right:200px;">The meaning will be displayed here.</h5>
+    
+        <div class="form-group text-center">
+            <label for="word" class="text-light mb-4 lbl">Enter the word you want to get the meaning of</label>
+            <input type="text" class="form-control text-center d-block mx-auto w-25 wordbox text-light" id="word">
+            <button class="btn btn-danger mb-5 mt-2" onclick="Clear()">Clear</button>
 
-    <div class="container mt-5 pt-5"  style="position: absolute; top: 200px; right: 210px; width: 18rem; background: rgb(48, 48, 48);padding: 25px; border-radius: 10px;" id="meaningContainer">
-        <h3 class="text-light mt-5 pt-5 d-none subject">Meaning</h3>
-        <p class="text-light pt-3 d-none word-meaning fs-4"></p>
+            <button class="btn btn-dark d-block mx-auto my-4 mybutton" onclick="createMeaning();">Get meaning</button>
+        </div>
+        <div class="container text-center mt-5 pt-5">
+            <h3 class="text-light mt-5 pt-5 d-none subject">Meaning</h3>
+            <p class="text-light pt-3 d-none word-meaning fs-4"></p>
+        </div>
     </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
      <script src="script.js"></script>
@@ -176,9 +178,9 @@
                 if (!response.ok){
                     
                 let h4 = document.querySelector('.word-meaning');
-                h4.innerText = "Meaning not found. You might have misspelled the word. Please try again!";
+                h4.innerText = "Meaning not found. You might have misspelled the word. Please try again";
                 h4.classList.remove("d-none")
-                h4.classList.add("d-block", "animated2");
+                h4.classList.add("d-inline", "animated2");
                 h4.addEventListener("animationend", ()=>{
                     h4.classList.remove("animated2");
                 })
@@ -192,11 +194,10 @@
                 let h4 = document.querySelector('.word-meaning');
                 h4.innerText = meaning;
                 h4.classList.remove("d-none")
-                h4.classList.add("d-block", "animated2");
+                h4.classList.add("d-inline", "animated2");
                 h4.addEventListener("animationend", ()=>{
                     h4.classList.remove("animated2");
                 })
-
 
 
             })
