--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </li>
         </ul>
     </nav>
-    <div class="container d-flex">
+    <div class="container">
 
     
         <div class="form-group text-center">
